fix: Fixed tab dark mode

--- a/src/theme/dark-mode.scss
+++ b/src/theme/dark-mode.scss
@@ -78,4 +78,8 @@
             @include skeleton-animation(#333);
         }
     }
+
+    bk-tabs {
+        --background-color-base: hsl(220, 3%, 10%);
+    }
 }
